tests/functional/lang/eval-fail-bitAnd-2.err.exp
error:
       … while calling the 'bitAnd' builtin
         at /pwd/lang/eval-fail-bitAnd-2.nix:1:1:
            1| builtins.bitAnd 1 2.2
             | ^
            2|

       … while evaluating the second argument passed to builtins.bitAnd

       error: expected an integer but found a float: 2.2
